--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -20,6 +20,8 @@
       </div>
     </main>
 
+    <ul class="gallery"></ul>
+
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
