--- a/src/2-form.html
+++ b/src/2-form.html
@@ -15,6 +15,18 @@
           <span class="main-title-gradient">Welcome</span> to Form
         </h1>
         <a class="back-link" href="./index.html">Go back</a>
+
+        <form class="feedback-form" autocomplete="off">
+  <label class="input">
+    Email
+    <input  type="email" name="email" autofocus />
+  </label>
+  <label class="textarea">
+    Message
+    <textarea  name="message" rows="8"></textarea>
+  </label>
+  <button class="btn" type="submit">Submit</button>
+</form>
       </div>
     </main>
 
